--- a/04Boltz/porocilo/04Boltz.tex
+++ b/04Boltz/porocilo/04Boltz.tex
@@ -59,7 +59,7 @@
 Boltzmannovo konstanto $k_B$ lahko izmerimo preko tokov znotraj bipolarnega tranzistorja. Tranzistor ima tri kontakte emitor, kolektor in bazo. Slednja dva v vaji sklenemo, da pride do kratkega stika in merimo odvisnost toka skozi kolektor. Napoved te odvisnosti je podana z Ebers-Millovo enačbo:
 
 \begin{equation}
-  I_C = I_S(T)\left[exp\left(\frac{e_0 U_{BE}{k_B T}}\right) - 1\right]
+  I_C = I_S(T)\left[exp\left(\frac{e_0 U_{BE}}{k_B T}\right) - 1 \right]
 \end{equation}
 
 kjer so $e_0$ osnovni naboj, $T$ absolutna temperatura, $U_{BE}$ pozitivna napetost med bazo in emitorjem ter $I_S (T)$ velikost nasičenega toka v zaporni smeri. Brez izgube natančnosti lahko poenostavimo v 
