Komentarji za Luko

--- a/01Spektr/obdelava.ipynb
+++ b/01Spektr/obdelava.ipynb
@@ -58,9 +58,11 @@
     }
    ],
    "source": [
-    "kot = unp.uarray([45.2, 45.4, 47.1, 44.5, 46.0, 47.2], 6 * [0.1])\n",
+    "# umeritev kotne skale spektroskopa s Hg\n",
     "\n",
-    "dolz = unp.uarray([578, 546, 436, 656, 486, 434], 6 * [0]) * 1e-9\n",
+    "kot = unp.uarray([45.2, 45.4, 47.1, 44.5, 46.0, 47.2], 6 * [0.1]) # v prvi array [45.2, ...] napiši svoje kote, prvi trije so iz Hg, preostali 3je pa za H\n",
+    "\n",
+    "dolz = unp.uarray([578, 546, 436, 656, 486, 434], 6 * [0]) * 1e-9 #znane valovne dolžine, prve 3 valovne dolžine so za Hg, preostale 3 pa za H\n",
     "\n",
     "par, cov = curve_fit(fja, unp.nominal_values(dolz), unp.nominal_values(kot), sigma=unp.std_devs(kot), absolute_sigma=True)\n",
     "\n",
@@ -95,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " from numba import vectorize\n",
+    " from numba import vectorize #namesti si numba (v terminal napiši \"pip install numba\")\n",
     "\n",
     "def makefunc_calc_dolz(A, B, C):\n",
     "    @vectorize\n",
@@ -112,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import imageio.v2 as imageio\n",
+    "import imageio.v2 as imageio #namesti si imageio (v terminal napiši \"pip install imageio\")\n",
     "\n",
     "spectrum = imageio.imread('./sRGB-approx.png', pilmode='RGB')[0]\n",
     "\n",
@@ -156,7 +158,7 @@
    "source": [
     "# varčna žarnica \n",
     "\n",
-    "kot1 = np.array([47.3, 46.4, 45.8, 45.5, 45.2])\n",
+    "kot1 = np.array([47.3, 46.4, 45.8, 45.5, 45.2]) #izmerjeni koti \n",
     "\n",
     "dolz = calc_dolz(kot1)\n",
     "\n",
@@ -217,9 +219,9 @@
    "source": [
     "# LED \n",
     "\n",
-    "kotmin = np.array([47.1, 45.4, 45.0, 45.6])\n",
+    "kotmin = np.array([47.1, 45.4, 45.0, 45.6]) #spodnje vrednosti (po valovni dolžini) napiši tukaj \n",
     "\n",
-    "kotmax = np.array([46.0, 45.1, 44.7, 45.0])\n",
+    "kotmax = np.array([46.0, 45.1, 44.7, 45.0]) #zgornje vrednosti (po valovni dolžini) napiši tukaj \n",
     "\n",
     "\n",
     "dolzmin = calc_dolz(kotmin)\n",
@@ -294,9 +296,9 @@
    "source": [
     "# Wolfram\n",
     "\n",
-    "kotmin = np.array([44.4, 44.6, 45.3, 46.2, 47.3])\n",
+    "kotmin = np.array([44.4, 44.6, 45.3, 46.2, 47.3]) # spodnje meje zapiši tukaj (opazi: 44.4 - 44.6; 44.6 - 45.3; 45.3 - 46.2; ...) \n",
     "\n",
-    "kotmax = np.array([44.6, 45.3, 46.2, 47.3, 48.2])\n",
+    "kotmax = np.array([44.6, 45.3, 46.2, 47.3, 48.2]) #zgornje meje zapiši tukaj \n",
     "\n",
     "\n",
     "dolzmin = calc_dolz(kotmin)\n",
@@ -380,7 +382,7 @@
    "source": [
     "# no2\n",
     "\n",
-    "kot2 = np.array([45.1, 45.3, 45.5, 45.8, 46.1, 46.3, 46.5, 46.7, 46.7])\n",
+    "kot2 = np.array([45.1, 45.3, 45.5, 45.8, 46.1, 46.3, 46.5, 46.7, 46.7]) # izmerjene kote pri črtah vpiši v array\n",
     "\n",
     "dolz = calc_dolz(kot2)\n",
     "\n",
@@ -441,7 +443,7 @@
    "source": [
     "# he\n",
     "\n",
-    "kot3 = np.array([44.5, 44.6, 45.1, 45.9, 46.0, 46.4, 46.8, 47.0])\n",
+    "kot3 = np.array([44.5, 44.6, 45.1, 45.9, 46.0, 46.4, 46.8, 47.0]) #izmerjene kote pri spektru zapiši v array \n",
     "\n",
     "dolz = calc_dolz(kot3)\n",
     "\n",
@@ -499,7 +501,7 @@
    "source": [
     "# he\n",
     "\n",
-    "kot4 = np.array([45.0, 45.2, 45.4, 45.8, 46.7])\n",
+    "kot4 = np.array([45.0, 45.2, 45.4, 45.8, 46.7])  #izmerjene kote pri spektru zapiši v array\n",
     "\n",
     "dolz = calc_dolz(kot4)\n",
     "\n",
