--- a/03FraHer/obdelava.ipynb
+++ b/03FraHer/obdelava.ipynb
@@ -24,14 +24,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-15.6 -10.4  -5.2   0. ]\n"
+      "\\begin{array}\n",
+      " -15.60 &    6.24\\\\\n",
+      " -10.40 &    2.50\\\\\n",
+      "  -5.20 &    0.42\\\\\n",
+      "    0.00 &  -2.91\n",
+      "\\end{array}\n",
+      "None\n",
+      "\\begin{array}\n",
+      " -15.60 &   10.37\\\\\n",
+      " -10.40 &    6.34\\\\\n",
+      "  -5.20 &    0.58\\\\\n",
+      "    0.00 &  -4.61\n",
+      "\\end{array}\n",
+      "None\n",
+      "\\begin{array}\n",
+      " -15.60 &   25.28\\\\\n",
+      " -10.40 &   14.22\\\\\n",
+      "  -5.20 &    0.00\\\\\n",
+      "    0.00 &  -7.90\n",
+      "\\end{array}\n",
+      "None\n",
+      "\\begin{array}\n",
+      "  -7.28 &   44.80\\\\\n",
+      "  -5.20 & -224.00\\\\\n",
+      "    0.00 & -268.80\\\\\n",
+      "    5.20 & -313.60\\\\\n",
+      "   10.40 & -313.60\n",
+      "\\end{array}\n",
+      "None\n"
      ]
     }
    ],
@@ -39,26 +67,32 @@
     "R = 1e3 \n",
     "q_0 = 1.602e-19\n",
     "\n",
-    "d180 = pd.read_csv('./meritve/180.csv', delimiter=';')\n",
+    "d180 = pd.read_csv('./meritve/180.csv', delimiter=';') #podatki za 180 stopinj Celzija\n",
     "d180 = np.array(d180)\n",
+    "d180[1:, 1] = d180[1:, 1] * 1e3\n",
     "\n",
-    "d160 = pd.read_csv('./meritve/160.csv', delimiter=';')\n",
+    "d160 = pd.read_csv('./meritve/160.csv', delimiter=';') #podatki za 160 stopinj Celzija\n",
     "d160 = np.array(d160)\n",
+    "d160[1:, 1] = d160[1:, 1] * 1e3\n",
     "\n",
-    "d140 = pd.read_csv('./meritve/140.csv', delimiter=';')\n",
+    "d140 = pd.read_csv('./meritve/140.csv', delimiter=';') #podatki za 140 stopinj Celzija\n",
     "d140 = np.array(d140)\n",
+    "d140[1:, 1] = d140[1:, 1] * 1e3\n",
     "\n",
-    "d120 = pd.read_csv('./meritve/120.csv', delimiter=';')\n",
+    "d120 = pd.read_csv('./meritve/120.csv', delimiter=';') #podatki za 120 stopinj Celzija\n",
     "d120 = np.array(d120)\n",
+    "d120[1:, 1] = d120[1:, 1] * 1e3\n",
     "\n",
-    "print(d180[1:, 0])\n",
-    "\n",
-    "    "
+    "    \n",
+    "print(a2l.to_ltx(d180[1:], frmt='{:6.2f}', arraytype='array'))\n",
+    "print(a2l.to_ltx(d160[1:], frmt='{:6.2f}', arraytype='array'))\n",
+    "print(a2l.to_ltx(d140[1:], frmt='{:6.2f}', arraytype='array'))\n",
+    "print(a2l.to_ltx(d120[1:], frmt='{:6.2f}', arraytype='array'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +111,7 @@
    "source": [
     "fig, axs = plt.subplots(2, 2, figsize=[6, 5])\n",
     "\n",
-    "aux = [[180, 160, 140, 120], axs.flat, [d180, d160, d140, d120]]\n",
+    "aux = [[180, 160, 140, 120], axs.flat, [d180, d160, d140, d120]]  # za prava imena grafov spreminjaj prvi seznam v aux po potrebi\n",
     "\n",
     "\n",
     "res=[]\n",
