--- a/04Boltz/obdelava.ipynb
+++ b/04Boltz/obdelava.ipynb
@@ -53,6 +53,8 @@
     }
    ],
    "source": [
+    "#testiranje \n",
+    "\n",
     "data = np.loadtxt('meritve/500.txt')\n",
     "\n",
     "print(data[:, 0])"
@@ -86,20 +88,20 @@
     }
    ],
    "source": [
-    "# podatki \n",
+    "# podatki za prvo meritev\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "I = 10e-6\n",
     "\n",
-    "for name, temp in zip(* [['meritve/148.txt', 'meritve/316.txt', 'meritve/500.txt'], [14.8, 31.6, 55.0]]):\n",
+    "for name, temp in zip(* [['meritve/148.txt', 'meritve/316.txt', 'meritve/500.txt'], [14.8, 31.6, 55.0]]): #prvi seznam ima imena datotek, kjer so podatki, drugi seznam ima temperature pri katerih je bilo merjeno - za legendo na grafu, spremeni po potrebi\n",
     "    data = np.loadtxt(name)\n",
     "    U = data[:, 0]\n",
     "    I_i = data[:, 1]\n",
     "\n",
-    "    ax.scatter(U, np.log(I_i / I), marker='.', label=f'${temp}^\\circ C$')\n",
+    "    ax.scatter(U, np.log(I_i / I), marker='.', label=f'${temp}^\\circ C$') #točke na grafu\n",
     "\n",
-    "    par, cov = curve_fit(linearna, np.log(I_i / I), U)\n",
+    "    par, cov = curve_fit(linearna, np.log(I_i / I), U) #regresija za napetost v odvisnosti od toka, medtem ko je spodnji graf tok v odvisnosti od napetosti!\n",
     "\n",
     "    m, c = par\n",
     "    dm, dc = np.sqrt(np.diag(cov))\n",
@@ -108,19 +110,19 @@
     "\n",
     "    T = unp.uarray([temp + 273.15], [temp * 0.03])\n",
     "\n",
-    "    ke_0 = m / T \n",
+    "    ke_0 = m / T #računanje k_b * e_0\n",
     "\n",
     "    e_0 = 1.602e-19\n",
     "\n",
     "    k = ke_0 * e_0\n",
     "\n",
-    "    print(T, ke_0, k)\n",
+    "    print(T, ke_0, k) # izpiše ti temperaturo, vrednost k_b * e_0 in vrednost Boltzmannove konstante\n",
     "\n",
-    "    log_I_i = np.linspace(-6, 6)\n",
+    "    log_I_i = np.linspace(-6, 6) # numpy array za logaritem toka, spreminjaj številke po potrebi glede na svoje podatke (opazuj y-os na grafu)\n",
     "\n",
-    "    ax.plot(linearna(log_I_i, *par), log_I_i, linestyle='--', color='k', zorder=-1)\n",
+    "    ax.plot(linearna(log_I_i, *par), log_I_i, linestyle='--', color='k', zorder=-1) #risanje grafa, pazi, da se riše x os v odvisnosti od y in ne obratno!\n",
     "\n",
-    "    ax.set_xlim(0.39, 0.61)\n",
+    "    ax.set_xlim(0.39, 0.61) #spreminjaj omejitev x osi po potrebi, da se prikažejo vse meritve \n",
     "    ax.set_title(r'Karakteristika $I_C(U_{BE})$')\n",
     "    ax.set_xlabel(r'$U_{BE} [V]$')\n",
     "    ax.set_ylabel(r'$\\ln \\left(\\frac{I_C}{I_1}\\right)$')\n",
@@ -151,16 +153,16 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "for name, volt in zip(*[['meritve/5V.txt', 'meritve/580.txt'], [0.5, 0.58]]):\n",
+    "for name, volt in zip(*[['meritve/5V.txt', 'meritve/580.txt'], [0.5, 0.58]]): #prvi seznam je za lokacijo datoteke, drugi seznam je pri kateri napetosti je bila merjena odvisnost \n",
     "    data = np.loadtxt(name)\n",
     "    I_c = data[:, 1]\n",
     "    T = data[:, 0]\n",
     "    ax.scatter(T, 1e6 * I_c, marker='.', label=f'{volt}V')\n",
-    "    ax.set_xlim(-1, 95)\n",
+    "    ax.set_xlim(-1, 95) #spreminjaj limito x osi po potrebi (od najnižje temperature + 1 do najvišje + 1 )\n",
     "    ax.set_title(r'Temperaturna odvisnost od $I_C$')\n",
     "    ax.set_xlabel(r'$T[^\\circ C]$')\n",
     "    ax.set_ylabel(r'$I_C [\\mu A]$')\n",
-    "    ax.set_yscale('log')\n",
+    "    ax.set_yscale('log') #logaritemska skala \n",
     "ax.legend()\n",
     "fig.tight_layout()\n",
     "fig.savefig('2graf.pdf')"
