--- a/02Milik/obdelava.ipynb
+++ b/02Milik/obdelava.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = unp.uarray([13.4, 13.6, 17.7, 42.0, 24.8, 30.4, 27.1, 24.6, 22.8, 8.75, 29.9, 41.3, 51.5, 56.3, 27.7, 34.2, 50.3], 17*[0.001]) * 1e-6\n",
+    "data = unp.uarray([13.4, 13.6, 17.7, 42.0, 24.8, 30.4, 27.1, 24.6, 22.8, 8.75, 29.9, 41.3, 51.5, 56.3, 27.7, 34.2, 50.3], 17*[0.001]) * 1e-6 #hitrosti padanja v prvem delu - imel sem premalo kapljic, imej jih vsaj 25. \n",
     "\n",
     "\n",
     "# Constants\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,23 +56,23 @@
      "output_type": "stream",
      "text": [
       "\\begin{array}\n",
-      "    13.4 &    36.3 &     0.3\\\\\n",
-      "    13.6 &    36.6 &     0.3\\\\\n",
-      "    17.7 &    41.7 &     0.5\\\\\n",
-      "    42.0 &    64.3 &     1.9\\\\\n",
-      "    24.8 &    49.4 &     0.9\\\\\n",
-      "    30.4 &    54.7 &     1.2\\\\\n",
-      "    27.1 &    51.6 &     1.0\\\\\n",
-      "    24.6 &    49.2 &     0.8\\\\\n",
-      "    22.8 &    47.4 &     0.8\\\\\n",
-      "     8.8 &    29.3 &     0.2\\\\\n",
-      "    29.9 &    54.3 &     1.1\\\\\n",
-      "    41.3 &    63.8 &     1.8\\\\\n",
-      "    51.5 &    71.2 &     2.6\\\\\n",
-      "    56.3 &    74.4 &     2.9\\\\\n",
-      "    27.7 &    52.2 &     1.0\\\\\n",
-      "    34.2 &    58.0 &     1.4\\\\\n",
-      "    50.3 &    70.4 &     2.5\n",
+      "    13.4 &   363.2 &     0.3\\\\\n",
+      "    13.6 &   365.9 &     0.3\\\\\n",
+      "    17.7 &   417.4 &     0.5\\\\\n",
+      "    42.0 &   643.0 &     1.9\\\\\n",
+      "    24.8 &   494.1 &     0.9\\\\\n",
+      "    30.4 &   547.0 &     1.2\\\\\n",
+      "    27.1 &   516.5 &     1.0\\\\\n",
+      "    24.6 &   492.1 &     0.8\\\\\n",
+      "    22.8 &   473.8 &     0.8\\\\\n",
+      "     8.8 &   293.5 &     0.2\\\\\n",
+      "    29.9 &   542.5 &     1.1\\\\\n",
+      "    41.3 &   637.6 &     1.8\\\\\n",
+      "    51.5 &   712.0 &     2.6\\\\\n",
+      "    56.3 &   744.5 &     2.9\\\\\n",
+      "    27.7 &   522.2 &     1.0\\\\\n",
+      "    34.2 &   580.2 &     1.4\\\\\n",
+      "    50.3 &   703.7 &     2.5\n",
       "\\end{array}\n",
       "None\n"
      ]
@@ -85,14 +85,14 @@
     "\n",
     "q1 = (4 * np.pi * r1 ** 3 * (rho - rho_zr) * g) / (3 * E)\n",
     "\n",
-    "data1 = np.array([unp.nominal_values(data) * 1e6, unp.nominal_values(r1) * 1e8, unp.nominal_values(q1 / q_0_theor)]).T\n",
+    "data1 = np.array([unp.nominal_values(data) * 1e6, unp.nominal_values(r1) * 1e9, unp.nominal_values(q1 / q_0_theor)]).T\n",
     "\n",
     "print(a2l.to_ltx(data1, frmt='{:6.1f}', arraytype='array'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,20 +100,20 @@
      "output_type": "stream",
      "text": [
       "\\begin{array}\n",
-      "    70.1 &    23.8 &    47.7 &     1.7\\\\\n",
-      "    67.8 &    26.4 &    45.1 &     1.7\\\\\n",
-      "    73.0 &    34.2 &    43.7 &     1.8\\\\\n",
-      "    68.7 &    29.2 &    44.1 &     1.7\\\\\n",
-      "    59.7 &    14.5 &    47.2 &     1.4\\\\\n",
-      "    72.0 &    56.8 &    27.4 &     1.4\\\\\n",
-      "    63.7 &    23.0 &    44.8 &     1.5\\\\\n",
-      "    67.5 &     4.6 &    55.6 &     1.6\\\\\n",
-      "    65.7 &    26.4 &    44.0 &     1.6\\\\\n",
-      "    70.5 &     0.7 &    58.6 &     1.6\\\\\n",
-      "    72.8 &     1.2 &    59.4 &     1.7\\\\\n",
-      "    99.6 &    37.4 &    55.3 &     3.0\\\\\n",
-      "   103.4 &    39.2 &    56.2 &     3.1\\\\\n",
-      "   106.1 &    18.0 &    65.8 &     3.2\n",
+      "    70.1 &    23.8 &   477.4 &     1.7\\\\\n",
+      "    67.8 &    26.4 &   451.4 &     1.7\\\\\n",
+      "    73.0 &    34.2 &   437.0 &     1.8\\\\\n",
+      "    68.7 &    29.2 &   440.9 &     1.7\\\\\n",
+      "    59.7 &    14.5 &   471.7 &     1.4\\\\\n",
+      "    72.0 &    56.8 &   273.5 &     1.4\\\\\n",
+      "    63.7 &    23.0 &   447.6 &     1.5\\\\\n",
+      "    67.5 &     4.6 &   556.4 &     1.6\\\\\n",
+      "    65.7 &    26.4 &   439.8 &     1.6\\\\\n",
+      "    70.5 &     0.7 &   586.1 &     1.6\\\\\n",
+      "    72.8 &     1.2 &   593.6 &     1.7\\\\\n",
+      "    99.6 &    37.4 &   553.3 &     3.0\\\\\n",
+      "   103.4 &    39.2 &   562.1 &     3.1\\\\\n",
+      "   106.1 &    18.0 &   658.5 &     3.2\n",
       "\\end{array}\n",
       "None\n"
      ]
@@ -124,9 +124,9 @@
     "\n",
     "E2 = U2/d\n",
     "\n",
-    "v_p = unp.uarray([70.1, 67.8, 73.0, 68.7, 59.7, 72.0, 63.7, 67.5, 65.67, 70.5, 72.8, 99.6, 103.4, 106.1, ], 14 * [0.001]) * 1e-6\n",
+    "v_p = unp.uarray([70.1, 67.8, 73.0, 68.7, 59.7, 72.0, 63.7, 67.5, 65.67, 70.5, 72.8, 99.6, 103.4, 106.1, ], 14 * [0.001]) * 1e-6 #hitrosti kapljic pri padanja navzdol \n",
     "\n",
-    "v_m = unp.uarray([23.8, 26.4, 34.2, 29.2, 14.5, 56.8, 23.0, 4.6, 26.37, 0.7, 1.2, 37.4, 39.2, 18.0], 14 * [0.001]) * 1e-6\n",
+    "v_m = unp.uarray([23.8, 26.4, 34.2, 29.2, 14.5, 56.8, 23.0, 4.6, 26.37, 0.7, 1.2, 37.4, 39.2, 18.0], 14 * [0.001]) * 1e-6 # hitrosti kapljiv pri premikanju navzgor (proti težnostnemu pospešku)\n",
     "\n",
     "\n",
     "\n",
@@ -134,14 +134,14 @@
     "\n",
     "q2 = 3 * np.pi * r2 * nu_zr * (v_p + v_m) / E2\n",
     "\n",
-    "data2 = np.array([unp.nominal_values(v_p) * 1e6, unp.nominal_values(v_m) * 1e6, unp.nominal_values(r2) * 1e8, unp.nominal_values(q2 / q_0_theor)]).T\n",
+    "data2 = np.array([unp.nominal_values(v_p) * 1e6, unp.nominal_values(v_m) * 1e6, unp.nominal_values(r2) * 1e9, unp.nominal_values(q2 / q_0_theor)]).T\n",
     "\n",
     "print(a2l.to_ltx(data2, frmt='{:6.1f}', arraytype='array'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (main, Dec 19 2022, 17:35:49) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
