--- a/02Milik/porocilo/02Milik.tex
+++ b/02Milik/porocilo/02Milik.tex
@@ -87,7 +87,7 @@ Hitrosti $v_+$ in $v_-$ sta hitrosti premikanja v pozitivni in negativni smeri t
 in absolutno vrednost večkratnika naboja $n$: 
 
 \begin{equation}
-  |n|e_0 = \frac{3\phi r \eta}{E}(v_+ + v_-)
+  |n|e_0 = \frac{3\pi r \eta}{E}(v_+ + v_-)
 \end{equation}
   
 \chapter*{Naloga}
@@ -126,6 +126,74 @@ Za račun potrebujem tudi gostoto olja, zraka ter njegovo viskoznost:
   \eta_{zr} &= (18.3 \pm 0.1)\,\si{\mu Pas}
 \end{align*}
 
+Za prvi način imamo sledeče podatke pri napetosti $U = 154mV$ in graf: 
+
+\begin{tabela}[H]
+  \centering
+  \[
+      \begin{array}{|c|c|c|} \hline
+      v [\si{\mu m /s}] & r [\si{nm}] & q [1.602 \cdot 10^{-19} \si{As}] \\ \hline 
+      13.4 &   363.2 &     0.3\\
+      13.6 &   365.9 &     0.3\\
+      17.7 &   417.4 &     0.5\\
+      42.0 &   643.0 &     1.9\\
+      24.8 &   494.1 &     0.9\\
+      30.4 &   547.0 &     1.2\\
+      27.1 &   516.5 &     1.0\\
+      24.6 &   492.1 &     0.8\\
+      22.8 &   473.8 &     0.8\\
+       8.8 &   293.5 &     0.2\\
+      29.9 &   542.5 &     1.1\\
+      41.3 &   637.6 &     1.8\\
+      51.5 &   712.0 &     2.6\\
+      56.3 &   744.5 &     2.9\\
+      27.7 &   522.2 &     1.0\\
+      34.2 &   580.2 &     1.4\\
+      50.3 &   703.7 &     2.5 \\ \hline
+    \end{array}
+  \]
+\end{tabela}
+
+\begin{slika}[H]
+  \centering
+  \includegraphics{1metoda.pdf}
+  \caption{\small Histogram prikazuje točke velikosti naboja. Lahko opazim "stopnice", ki so mnogokratniki osnovnega naboja.}
+\end{slika}
+
+
+Za drugi način imam sledeče podatke pri napetosti $U=134mV$:
+
+\begin{tabela}[H]
+  \centering
+  \[
+      \begin{array}{|c|c|c|c|} \hline
+        v_+ [\si{\mu m/s}] & v_- [\si{\mu m/s}] & r[\si{nm}]& q [1.602 \cdot 10^{-19} \si{As}] \\ \hline 
+        70.1 &    23.8 &   477.4 &     1.7\\
+        67.8 &    26.4 &   451.4 &     1.7\\
+        73.0 &    34.2 &   437.0 &     1.8\\
+        68.7 &    29.2 &   440.9 &     1.7\\
+        59.7 &    14.5 &   471.7 &     1.4\\
+        72.0 &    56.8 &   273.5 &     1.4\\
+        63.7 &    23.0 &   447.6 &     1.5\\
+        67.5 &     4.6 &   556.4 &     1.6\\
+        65.7 &    26.4 &   439.8 &     1.6\\
+        70.5 &     0.7 &   586.1 &     1.6\\
+        72.8 &     1.2 &   593.6 &     1.7\\
+        99.6 &    37.4 &   553.3 &     3.0\\
+       103.4 &    39.2 &   562.1 &     3.1\\
+       106.1 &    18.0 &   658.5 &     3.2 \\ \hline 
+      \end{array}
+  \]
+\end{tabela}
+
+\begin{slika}[H]
+  \centering
+  \includegraphics{2metoda.pdf}
+  \caption{\small Histogram prikazuje točke velikosti naboja. "Stopnice" oz. mnogokratniki osnovnega naboja so tukaj slabše vidni.}
+  \label{fig:2}
+\end{slika}
+
+Iz grafa \ref{fig:2} preberem, da je vrednost osnovnega naboja okoli $q_0 = (1.5 \pm 0.3) 1.602 \cdot 10^{-19}As$. 
 
 
 
