--- a/05SkNihKr/obdelava.ipynb
+++ b/05SkNihKr/obdelava.ipynb
@@ -165,12 +165,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#prvi_del('meritve/CSV1/SDS00001.csv', 0, 16e-6)\n",
-    "#prvi_del('meritve/CSV1/SDS00002.csv', 150, 16e-6)\n",
-    "#prvi_del('meritve/CSV1/SDS00003.csv', 330, 16e-6)\n",
-    "#prvi_del('meritve/CSV1/SDS00004.csv', 560, 16e-6)\n",
-    "#prvi_del('meritve/CSV1/SDS00005.csv', 820, 16e-6)\n",
-    "#prvi_del('meritve/CSV1/SDS00006.csv', 1150, 16e-6)"
+    "prvi_del('meritve/CSV1/SDS00001.csv', 0, 16e-6) #prvi parameter je ime datoteke, drugi je kapaciteta kondenzatorja in tretje ne spreminjaj\n",
+    "prvi_del('meritve/CSV1/SDS00002.csv', 150, 16e-6)\n",
+    "prvi_del('meritve/CSV1/SDS00003.csv', 330, 16e-6)\n",
+    "prvi_del('meritve/CSV1/SDS00004.csv', 560, 16e-6)\n",
+    "prvi_del('meritve/CSV1/SDS00005.csv', 820, 16e-6)\n",
+    "prvi_del('meritve/CSV1/SDS00006.csv', 1150, 16e-6)"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "# U1 \n",
     "\n",
-    "omegaU1a = omega(14, 200e-6, 5e-6)\n",
+    "omegaU1a = omega(14, 200e-6, 5e-6) #število maksimumov, čas teh maksimumov + napaka za čas\n",
     "omegaU1b = omega(27, 400e-6, 5e-6)\n",
     "omegaU1c = omega(38, 580e-6, 5e-6)\n",
     "omegaU1d = omega(37, 600e-6, 5e-6)\n",
@@ -260,7 +260,7 @@
    "source": [
     "# U1\n",
     "\n",
-    "domegaU1a, betaU1a = domega_dBeta(200e-6, 5e-6, 8.2e-3, 0.2e-3, 1e-3, 0.2e-3)\n",
+    "domegaU1a, betaU1a = domega_dBeta(200e-6, 5e-6, 8.2e-3, 0.2e-3, 1e-3, 0.2e-3) # čas od maksimuma do kasnejšega maksimuma, napaka časa, maksimum + napaka, maksimum kasneje + napaka \n",
     "domegaU1b, betaU1b = domega_dBeta(260e-6, 5e-6, 8.2e-3, 0.5e-3, 1.5e-3, 0.5e-3)\n",
     "domegaU1c, betaU1c = domega_dBeta(340e-6, 5e-6, 8e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
     "domegaU1d, betaU1d = domega_dBeta(350e-6, 5e-6, 8e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
@@ -309,8 +309,8 @@
     }
    ],
    "source": [
-    "data = np.loadtxt('meritve/2del.dat')\n",
-    "data_b = np.loadtxt('meritve/21del.dat')\n",
+    "data = np.loadtxt('meritve/2del.dat') #kratko staknjen krog\n",
+    "data_b = np.loadtxt('meritve/21del.dat') #nepovezana kroga\n",
     "\n",
     "data[:, 0] = data[:, 0] * 2 * np.pi\n",
     "data_b[:, 0] = data_b[:, 0] * 2 * np.pi\n",
@@ -383,7 +383,7 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "aux = [['meritve/resU2-150.dat', 'meritve/resU2-330.dat', 'meritve/resU2-560.dat', 'meritve/resU2-820.dat', 'meritve/resU2-1150.dat'], \n",
-    "[150, 330, 560, 820, 1150], ['tab:red', 'tab:orange', 'tab:green', 'tab:blue', 'tab:purple']]\n",
+    "[150, 330, 560, 820, 1150], ['tab:red', 'tab:orange', 'tab:green', 'tab:blue', 'tab:purple']] #imena datotek, kapaciteta, barva\n",
     "\n",
     "for name, C, color in zip(*aux):\n",
     "    data = np.loadtxt(name)\n",
@@ -392,8 +392,10 @@
     "\n",
     "    ax.plot(1e-6 * omega, 1e3 * U, color=color, label=f'$U_2$ za C = {C}pF', marker='o', markersize=4)\n",
     "\n",
+    "    # računanje delta omege\n",
+    "\n",
     "    omega_tresh = 0.43e6\n",
-    "    max_ind = [np.argmax(U * (omega < omega_tresh)), np.argmax(U * (omega > omega_tresh))]\n",
+    "    max_ind = [np.argmax(U * (omega < omega_tresh)), np.argmax(U * (omega > omega_tresh))] # poišče maksimum pred in po omega_tresh\n",
     "    n, m = max_ind\n",
     "    omega1 = unp.uarray([omega[n]], [np.mean(np.diff(omega[n-1:n+2]))])\n",
     "    omega2 = unp.uarray([omega[m]], [np.mean(np.diff(omega[m-1:m+2]))])\n",
