--- a/05SkNihKr/obdelava.ipynb
+++ b/05SkNihKr/obdelava.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,17 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 101\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " def domega_dBeta(T_0, dT_0, U_0, dU_0, bU_T_0, dU_T_0):\n",
     "    T_0 = unp.uarray([T_0], [dT_0])\n",
@@ -209,9 +201,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.2566370614359172+/-0.031415926535897934]\n",
+      " [2.5132741228718345+/-0.031415926535897934]\n",
+      " [3.64424747816416+/-0.031415926535897934]\n",
+      " [3.7699111843077513+/-0.031415926535897934]\n",
+      " [3.9898226700590373+/-0.031415926535897934]\n",
+      " [3.958406743523139+/-0.031415926535897934]]\n",
+      "\\begin{array}\n",
+      "    1.26\\\\\n",
+      "    2.51\\\\\n",
+      "    3.64\\\\\n",
+      "    3.77\\\\\n",
+      "    3.99\\\\\n",
+      "    3.96\n",
+      "\\end{array}\n",
+      "None\n",
+      "\\begin{array}\n",
+      "    1.95\\\\\n",
+      "    3.14\\\\\n",
+      "    3.77\\\\\n",
+      "    1.95\\\\\n",
+      "    2.14\\\\\n",
+      "    3.14\n",
+      "\\end{array}\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# U1 \n",
     "\n",
@@ -222,6 +245,12 @@
     "omegaU1e = omega(37, 635e-6, 5e-6)\n",
     "omegaU1f = omega(36, 630e-6, 5e-6)\n",
     "\n",
+    "omegaU1 = unp.matrix([omegaU1a, omegaU1b, omegaU1c, omegaU1d, omegaU1e, omegaU1f])\n",
+    "\n",
+    "print(omegaU1 * 1e3)\n",
+    "\n",
+    "print(a2l.to_ltx(unp.nominal_values(omegaU1) * 1e3, frmt='{:6.2f}', arraytype='array'))\n",
+    "\n",
     "# U2\n",
     "\n",
     "omegaU2a = omega(22, 310e-6, 5e-6)\n",
@@ -229,32 +258,41 @@
     "omegaU2c = omega(40, 600e-6, 5e-6)\n",
     "omegaU2d = omega(21, 310e-6, 5e-6)\n",
     "omegaU2e = omega(21, 340e-6, 5e-6)\n",
-    "omegaU2f = omega(30, 500e-6, 5e-6)"
+    "omegaU2f = omega(30, 500e-6, 5e-6)\n",
+    "\n",
+    "omegaU2 = unp.matrix([omegaU2a, omegaU2b, omegaU2c, omegaU2d, omegaU2e, omegaU2f])\n",
+    "\n",
+    "print(a2l.to_ltx(unp.nominal_values(omegaU2) * 1e3, frmt='{:6.2f}', arraytype='array'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[31415.92653589793+/-785.3981633974482]\n",
-      "[10520.670771351037+/-1041.1771803420331]\n"
+      "\\begin{array}\n",
+      "   31.42 &    0.79 &   10.52 &    1.04\\\\\n",
+      "   24.17 &    0.46 &    6.53 &    1.31\\\\\n",
+      "   18.48 &    0.27 &    6.12 &    1.48\\\\\n",
+      "   17.95 &    0.26 &    5.94 &    1.44\\\\\n",
+      "   16.98 &    0.23 &    5.45 &    1.37\\\\\n",
+      "   20.27 &    0.33 &    6.28 &    1.63\n",
+      "\\end{array}\n",
+      "None\n",
+      "\\begin{array}\n",
+      "   22.44 &    0.40 &    6.40 &    1.81\\\\\n",
+      "   17.70 &    0.25 &    5.68 &    1.71\\\\\n",
+      "   15.71 &    0.20 &    5.76 &    2.51\\\\\n",
+      "   23.71 &    0.45 &    6.76 &    1.92\\\\\n",
+      "   23.27 &    0.43 &    6.64 &    1.88\\\\\n",
+      "   28.56 &    0.65 &    8.14 &    2.31\n",
+      "\\end{array}\n",
+      "None\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([31415.92653589793+/-785.3981633974482], dtype=object),\n",
-       " array([10520.670771351037+/-1041.1771803420331], dtype=object))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -267,6 +305,11 @@
     "domegaU1e, betaU1e = domega_dBeta(370e-6, 5e-6, 7.5e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
     "domegaU1f, betaU1f = domega_dBeta(310e-6, 5e-6, 7e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
     "\n",
+    "dataO = np.array([unp.nominal_values([domegaU1a, domegaU1b, domegaU1c, domegaU1d, domegaU1e, domegaU1f]), unp.std_devs([domegaU1a, domegaU1b, domegaU1c, domegaU1d, domegaU1e, domegaU1f]), unp.nominal_values([betaU1a, betaU1b, betaU1c, betaU1d, betaU1e, betaU1f]), unp.std_devs([betaU1a, betaU1b, betaU1c, betaU1d, betaU1e, betaU1f])])\n",
+    "\n",
+    "datao = np.squeeze(dataO, axis=2).T * 1e-3\n",
+    "\n",
+    "print(a2l.to_ltx(datao, frmt='{:6.2f}', arraytype='array'))\n",
     "\n",
     "# U2 \n",
     "\n",
@@ -275,7 +318,14 @@
     "domegaU2c, betaU2c = domega_dBeta(400e-6, 5e-6, 5e-3, 0.5e-3, 0.5e-3, 0.5e-3)\n",
     "domegaU2d, betaU2d = domega_dBeta(265e-6, 5e-6, 6e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
     "domegaU2e, betaU2e = domega_dBeta(270e-6, 5e-6, 6e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
-    "domegaU2f, betaU2f = domega_dBeta(220e-6, 5e-6, 6e-3, 0.5e-3, 1e-3, 0.5e-3)\n"
+    "domegaU2f, betaU2f = domega_dBeta(220e-6, 5e-6, 6e-3, 0.5e-3, 1e-3, 0.5e-3)\n",
+    "\n",
+    "data2 = np.array([unp.nominal_values([domegaU2a, domegaU2b, domegaU2c, domegaU2d, domegaU2e, domegaU2f]), unp.std_devs([domegaU2a, domegaU2b, domegaU2c, domegaU2d, domegaU2e, domegaU2f]), unp.nominal_values([betaU2a, betaU2b, betaU2c, betaU2d, betaU2e, betaU2f]), unp.std_devs([betaU2a, betaU2b, betaU2c, betaU2d, betaU2e, betaU2f])])\n",
+    "\n",
+    "data2 = np.squeeze(data2, axis=2).T * 1e-3\n",
+    "\n",
+    "print(a2l.to_ltx(data2, frmt='{:6.2f}', arraytype='array'))\n",
+    "\n"
    ]
   },
   {
@@ -352,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -365,6 +415,25 @@
       "[0.42882739721500673+/-0.0015707963267948943] [0.43039819354180164+/-0.0015707963267948943]\n",
       "[0.42882739721500673+/-0.0015707963267948943] [0.43039819354180164+/-0.0015707963267948943]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[41.31194339,  0.15707963],\n",
+       "        [42.88273972,  0.15707963],\n",
+       "        [42.88273972,  0.15707963],\n",
+       "        [42.88273972,  0.15707963],\n",
+       "        [42.88273972,  0.15707963]]),\n",
+       " array([[43.03981935,  0.15707963],\n",
+       "        [43.03981935,  0.15707963],\n",
+       "        [43.03981935,  0.15707963],\n",
+       "        [43.03981935,  0.15707963],\n",
+       "        [43.03981935,  0.15707963]]))"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -385,6 +454,11 @@
     "aux = [['meritve/resU2-150.dat', 'meritve/resU2-330.dat', 'meritve/resU2-560.dat', 'meritve/resU2-820.dat', 'meritve/resU2-1150.dat'], \n",
     "[150, 330, 560, 820, 1150], ['tab:red', 'tab:orange', 'tab:green', 'tab:blue', 'tab:purple']] #imena datotek, kapaciteta, barva\n",
     "\n",
+    "arr1 = np.ones((5, 2))\n",
+    "arr2 = np.ones((5, 2))\n",
+    "\n",
+    "i = 0\n",
+    "\n",
     "for name, C, color in zip(*aux):\n",
     "    data = np.loadtxt(name)\n",
     "    omega = 2 * np.pi * data[:, 0]\n",
@@ -400,13 +474,54 @@
     "    omega1 = unp.uarray([omega[n]], [np.mean(np.diff(omega[n-1:n+2]))])\n",
     "    omega2 = unp.uarray([omega[m]], [np.mean(np.diff(omega[m-1:m+2]))])\n",
     "    print(omega1 * 1e-6, omega2 * 1e-6)\n",
+    "    arr1[i, 0] = unp.nominal_values(omega1) * 1e-4\n",
+    "    arr1[i, 1] = unp.std_devs(omega1) * 1e-4\n",
+    "    arr2[i, 0] = unp.nominal_values(omega2) * 1e-4\n",
+    "    arr2[i, 1] = unp.std_devs(omega2) * 1e-4\n",
+    "    i += 1\n",
     "\n",
     "ax.set_title('Resonančne krivulje pri različnih sklopitvah')\n",
     "ax.set_xlabel(r'$\\omega [s^{-1}]$')\n",
     "ax.set_ylabel(r'$U_2 [mV]$')\n",
     "ax.legend()\n",
     "fig.tight_layout()\n",
-    "fig.savefig('vsiljenoU2.pdf')"
+    "fig.savefig('vsiljenoU2.pdf')\n",
+    "\n",
+    "arr1, arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[41.31194339  0.15707963 43.03981935  0.15707963]\n",
+      " [42.88273972  0.15707963 43.03981935  0.15707963]\n",
+      " [42.88273972  0.15707963 43.03981935  0.15707963]\n",
+      " [42.88273972  0.15707963 43.03981935  0.15707963]\n",
+      " [42.88273972  0.15707963 43.03981935  0.15707963]]\n",
+      "\\begin{array}\n",
+      "    41.3 &     0.2 &    43.0 &     0.2\\\\\n",
+      "    42.9 &     0.2 &    43.0 &     0.2\\\\\n",
+      "    42.9 &     0.2 &    43.0 &     0.2\\\\\n",
+      "    42.9 &     0.2 &    43.0 &     0.2\\\\\n",
+      "    42.9 &     0.2 &    43.0 &     0.2\n",
+      "\\end{array}\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(data)\n",
+    "\n",
+    "print(a2l.to_ltx(data, frmt='{:6.1f}', arraytype='array'))\n",
+    "\n"
    ]
   }
  ],
@@ -426,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec 19 2022, 17:35:49) [GCC 12.2.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
